--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@angular/material": "^20.2.2",
     "@angular/platform-browser": "^20.2.0",
     "@angular/router": "^20.2.0",
+    "@swimlane/ngx-charts": "^23.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
